# QuantLearningPlatform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml
backend/: .dockerignore  .env.production.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py
backend/app/core/: config.py  database.py  security.py
backend/app/market_data/: base.py  factory.py  futu.py  mock.py  yahoo.py
backend/app/models/: __init__.py  asset.py  backtest.py  market.py  position.py  simulation.py  user.py
backend/app/routers/: assets.py  auth.py  backtests.py  deps.py  market_board.py  simulation_tasks.py  strategy_templates.py  trading.py
backend/app/schemas/: assets.py  auth.py  backtest.py  market.py  simulation.py  trading.py
backend/app/scripts/: __init__.py  generate_invitation_codes.py  migrate_sqlite_to_mysql.py
backend/app/services/: backtest.py  fees.py  fx.py  invitations.py  market_board.py  market_hours.py  market_scheduler.py  simulation_tasks.py
backend/app/simulation/: __init__.py  engine.py
backend/app/strategies/: __init__.py  templates.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  ROADMAP.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/lib/: api.ts
frontend/src/pages/: AnalyticsPage.tsx  AssetsPage.tsx  BacktestComparePage.tsx  BacktestDetailPage.tsx  BacktestsPage.tsx  DashboardPage.tsx  LoginPage.tsx  LogsPage.tsx  MarketBoardPage.tsx  (+7 more)
(+3 files in other folders)
