[project]
name = "quant-learning-simulator-backend"
version = "0.1.0"
description = "Backend for a paper-money quantitative trading learning simulator."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=5.0.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "PyMySQL>=1.2.0",
  "yfinance>=0.2.40",
  "futu-api>=9.4.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
market = [
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
